--- a/public/global.css
+++ b/public/global.css
@@ -12,6 +12,8 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	line-height: 1.75;
+	letter-spacing: 0.5px;
 }
 
 a {
