--- a/public/global.css
+++ b/public/global.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -19,7 +25,7 @@ body {
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(51, 51, 51);
 	text-decoration: none;
 }
 
